버전 업그레이드

--- a/deploy/app/templates/index.html
+++ b/deploy/app/templates/index.html
@@ -94,13 +94,18 @@
       font-family: 'Pretendard', sans-serif;
     }
   </style>
+
+  
    <script>
     console.log("Container ID: " + "{{hostname}}");
   </script>
+  
 </head>
+  
 <body>
+  
+  <script>console.log("DockerID:"+"{{hostname}}")</script>
   <header>
-    
     <div class="logo"></div>
     <p class="footer-text">오늘도 재미있는 쓱클하세요 👍</p>
     <div class="cute-font">
